--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -48,7 +48,7 @@ header > div > input {
 
         <!-- Search a specific node -->
         <div>
-            <input type="text" class="input" id="search_node" list="nodes" placeholder="search..." />
+            <input type="text" class="input" id="search_for_node" list="nodes" placeholder="search..." />
             <datalist id="nodes">
                 {% for node in nodes %}<option value="{{node}}">{{node}}</option>{% endfor %}
             </datalist>
@@ -56,8 +56,8 @@ header > div > input {
 
         <!-- Which edges -->
         <div>
-            <input type="checkbox" id="solutionEdges" name="solutionEdges" value="solutionEdges">
-            <label for="solutionEdges">Only show PCSF solution edges</label>
+            <input type="checkbox" id="show_only_solution_edges" name="show_only_solution_edges" value="show_only_solution_edges">
+            <label for="show_only_solution_edges">Only show PCSF solution edges</label>
         </div>
 
         <!-- Which edges -->
@@ -68,7 +68,7 @@ header > div > input {
 
         <!-- Amount of Force -->
         <div>
-            <label for="solutionEdges">Force</label>
+            <label for="show_only_solution_edges">Force</label>
             <input type="range" name="" min="10" max="800" step="1" value="100" onchange="repulsion_strength=this.value;restart();">
         </div>
 
@@ -259,6 +259,7 @@ graph.nodes.forEach(function (n) {
 
 var group = g.selectAll('.group')
 
+var label = g.selectAll(".label")
 
 var link = g.selectAll(".link")
             .data(graph.links)
@@ -279,7 +280,6 @@ var node = g.selectAll(".node")
             .enter().append("path")
             .attr("class", "node")
             .attr("id", function(d) { return d.id; })
-
             .attr("d",d => display_type(d.type))
             // .size(function(d) { return Math.PI * Math.pow(size(d.size) || nominal_base_node_size, 2); })
             .style(tocolor, function(d) {
@@ -288,6 +288,8 @@ var node = g.selectAll(".node")
             })
             .style("stroke-width", default_stroke_width)
             .style(towhite, "white")
+            // .on("click", function(d) { set_focus(d); })//.on("mouseup", function(d) { remove_focus(d); })
+            .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
             .call(cola.drag);
 
 
@@ -321,7 +323,7 @@ function recolor() {
 function restart() {
     // When we restart, we'd like to be able to change
     //  - which edges exist
-    //  - what the grouping is
+    //  - how the nodes are grouped
 
     // Changing which links exist
     links = show_only_solution_edges ? graph.links.filter(function (l) {return l.in_solution}) : graph.links;
@@ -343,14 +345,23 @@ function restart() {
 
     // Changing what the grouping is
     if (groupBy) {
-        group = group.data([])
-        group.exit().remove()
+        group = group.data([]);
+        group.exit().remove();
         group = group.data(groups[groupBy])
                      .enter()
                      .insert('rect', '.link')
                      .attr('rx',5)
                      .attr('ry',5)
                      .style("fill", function (d) { return group_color(d.id); })
+                     .call(cola.drag);
+
+        label = label.data([]);
+        label.exit().remove()
+        label = label.data(groups[groupBy])
+                     .enter()
+                     .insert('text', '.group')
+                     .attr("class", "label")
+                     .text(function (d) { return d.id; })
                      .call(cola.drag);
 
         cola.nodes(graph.nodes)
@@ -364,6 +375,9 @@ function restart() {
         group = group.data([])
         group.exit().remove()
         cola.groups([]);
+
+        label = label.data([]);
+        label.exit().remove()
 
         cola.nodes(graph.nodes)
             .links(links)
@@ -387,10 +401,13 @@ function restart() {
             .attr("cy", function (d) { return d.y; });
 
         if (groupBy) {
-            group.attr('x', function (d) { return d.bounds.x })
-                 .attr('y', function (d) { return d.bounds.y })
-                 .attr('width', function (d) { return d.bounds.width() })
-                 .attr('height', function(d) { return d.bounds.height() });
+            group.attr('x', function (d) { return d.bounds.x; })
+                 .attr('y', function (d) { return d.bounds.y; })
+                 .attr('width', function (d) { return d.bounds.width(); })
+                 .attr('height', function(d) { return d.bounds.height(); });
+
+            label.attr("x", function (d) { return d.bounds.x; })
+                 .attr("y", function (d) { return d.bounds.y; });
         }
     });
 
@@ -398,37 +415,6 @@ function restart() {
 
 restart();
 
-
-/////////////////////////////////////////////////////////////////////////////
-                      ///////    Drag    ///////
-/////////////////////////////////////////////////////////////////////////////
-
-// var drag_handler = d3.drag()
-//     .on("start", drag_start)
-//     .on("drag", drag_drag)
-//     .on("end", drag_end);
-
-// drag_handler(node);
-
-// function drag_start(d) {
-//     if (!d3.event.active) { cola.alphaTarget(0.3).restart(); }
-//     set_focus(d);
-//     d.fx = d.x;
-//     d.fy = d.y;
-//     if (shiftKey) {shiftKey = false; window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);}
-// }
-
-// function drag_drag(d) {
-//   d.fx = d3.event.x;
-//   d.fy = d3.event.y;
-// }
-
-// function drag_end(d) {
-//   if (!d3.event.active) { cola.alphaTarget(0); }
-//   remove_focus(d)
-//   d.fx = null;
-//   d.fy = null;
-// }
 
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Zoom    ///////
@@ -489,11 +475,17 @@ function remove_highlight() {
                       ///////    Focus    ///////
 /////////////////////////////////////////////////////////////////////////////
 
+node.on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
+
 function set_focus(d) {
+    // open new tab with node details
+    if (shiftKey) {shiftKey = false; console.log('here'); window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);}
     if (highlight_trans < 1) {
         node.style("opacity", function(o) { return isConnected(d, o) ? 1 : highlight_trans; });
         text.style("opacity", function(o) { return isConnected(d, o) ? 1 : highlight_trans; });
         link.style("opacity", function(o) { return o.source.index == d.index || o.target.index == d.index ? 1 : highlight_trans; });
+        group.style("opacity", function(o) { return highlight_trans * 2 });
+        label.style("opacity", function(o) { return highlight_trans * 2 });
     }
 }
 
@@ -502,8 +494,16 @@ function remove_focus() {
     node.style("opacity", 1);
     text.style("opacity", 1);
     link.style("opacity", 1);
+    group.style("opacity", 1);
+    label.style("opacity", 1);
     if (highlight_node === null) { remove_highlight(); }
 }
+
+var shiftKey;
+
+function keypress() { shiftKey = d3.event.shiftKey || d3.event.metaKey; }
+
+d3.select("body").on("keydown", keypress).on("keyup", keypress);
 
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Resize    ///////
@@ -524,7 +524,7 @@ resize();
                 ///////    Additional Features    ///////
 /////////////////////////////////////////////////////////////////////////////
 
-$("#search_node").on('input', function () {
+$("#search_for_node").on('input', function () {
     var val = this.value;
     if ($('#nodes').find('option').filter(function() {
         return this.value.toUpperCase() === val.toUpperCase();
@@ -536,7 +536,7 @@ $("#search_node").on('input', function () {
 });
 
 // Additional feature: toggle showing all edges / only solution edges
-$("#solutionEdges").change(function() {
+$("#show_only_solution_edges").change(function() {
     show_only_solution_edges = this.checked; restart();
 });
 
@@ -558,19 +558,6 @@ $("#turnForceOff").change(function() {
     turnForceOff = this.checked; restart();
 });
 
-// open new tab with node details
-var shiftKey;
-
-function keydown() {
-  shiftKey = d3.event.shiftKey || d3.event.metaKey;
-}
-function keyup() {
-  shiftKey = d3.event.shiftKey || d3.event.metaKey;
-}
-
-d3.select("body")
-  .on("keydown", keydown)
-  .on("keyup", keyup);
 
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Legends    ///////
