--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -72,6 +72,12 @@ header > div > input {
             <input type="range" name="" min="10" max="800" step="1" value="100" onchange="repulsion_strength=this.value;restart();">
         </div>
 
+        <!-- Edge Opacity -->
+        <div>
+            <label for="">Opacity</label>
+            <input type="range" name="edge_opacity" id="edge_opacity" min="0" max="1" step="0.01" value="1" onchange="edge_opacity=this.value;">
+        </div>
+
         <!-- Color By -->
         <div>
             <label for="colorBy">Color nodes by</label>
@@ -181,6 +187,7 @@ var highlight_color = "blue";
 var highlight_trans = 0.1;
 var default_node_color = "#ccc";
 var default_link_color = "#aaa";
+var edge_opacity = 1.0;
 var nominal_base_node_size = 8;
 var nominal_text_size = 10;
 var max_text_size = 24;
@@ -206,7 +213,7 @@ var cola = cola.d3adaptor(d3).size([w, h]);
 
 
 /////////////////////////////////////////////////////////////////////////////
-                      ///////    Setup    ///////
+                      ///////   Links Setup    ///////
 /////////////////////////////////////////////////////////////////////////////
 
 var linked = {};
@@ -229,7 +236,9 @@ function isNumber(n) {
 }
 
 
-
+/////////////////////////////////////////////////////////////////////////////
+                      ///////   Groups Setup    ///////
+/////////////////////////////////////////////////////////////////////////////
 
 var groups = {
     {% for attribute_name in non_numerical_node_attributes %}"{{attribute_name}}": {},{% endfor %}
@@ -258,10 +267,10 @@ if ("location" in groups) {
     _(groups['location']).each(function(location, i){if (i !== cytoplasm_index){groups['location'][cytoplasm_index]['groups'].push(i)}});
 }
 
-
 graph.nodes.forEach(function (n) {
     n.height = n.width = group_boundary_margin;
 });
+
 
 
 /////////////////////////////////////////////////////////////////////////////
@@ -364,6 +373,7 @@ function restart() {
                      .attr('rx',5)
                      .attr('ry',5)
                      .style("fill", function (d) { return group_color(d.id); })
+                     .style("opacity", function (d) { return 1/d.groups.length; })
                      .call(cola.drag);
 
         label = label.data([]);
@@ -565,6 +575,11 @@ $("#groupBy").change(function() {
 $("#turnForceOff").change(function() {
     turnForceOff = this.checked; restart();
 });
+
+// Change edge opacity
+$("#edge_opacity").change(function(){
+    link.style("opacity", function (d) { return edge_opacity; })
+})
 
 
 /////////////////////////////////////////////////////////////////////////////
