--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -300,6 +300,7 @@ var link = g.selectAll(".link")
                 if (isNumber(d.score) && d.score >= 0) { return color[colorBy](d.score); }
                 else { return default_link_color; }
             })
+            .style("opacity", edge_opacity);
 
 
 var node = g.selectAll(".node")
@@ -315,7 +316,7 @@ var node = g.selectAll(".node")
             })
             .style("stroke-width", default_stroke_width)
             .style(towhite, "white")
-            // .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
+            .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
             .call(cola.drag);
 
 
@@ -323,7 +324,7 @@ var text = g.selectAll(".text")
             .data(graph.nodes)
             .enter().append("text")
             .attr("dy", ".35em")
-            .style("font-size", nominal_text_size + "px")
+            .style("font-size", nominal_text_size + "px");
 
 if (text_center) {
     text.text(function(d) { return d.id; })
@@ -366,6 +367,7 @@ function restart() {
                   if (isNumber(d.score) && d.score >= 0) { return color[colorBy](d.score); }
                    else { return default_link_color; }
                })
+               .style("opacity", edge_opacity)
                .merge(link);
 
 
@@ -508,7 +510,8 @@ function remove_highlight() {
 node.on("click", function(d) { if (shiftKey) {shiftKey = false; window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);} });
 
 function set_focus(d) {
-    // open new tab with node details
+    d3.event.stopPropagation();
+
     if (shiftKey) {shiftKey = false; console.log('here'); window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);}
     if (highlight_trans < 1) {
         node.style("opacity", function(o) { return isConnected(d, o) ? 1 : highlight_trans; });
@@ -520,10 +523,12 @@ function set_focus(d) {
 }
 
 function remove_focus() {
+    d3.event.stopPropagation();
+
     focus_node = null;
     node.style("opacity", 1);
     text.style("opacity", 1);
-    link.style("opacity", 1);
+    link.style("opacity", edge_opacity);
     group.style("opacity", 1);
     label.style("opacity", 1);
     if (highlight_node === null) { remove_highlight(); }
