--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -197,9 +197,9 @@ var max_stroke = 16;
 var max_base_node_size = 36;
 var min_zoom = 0.2;
 var max_zoom = 7;
-var group_boundary_margin = 40;
+var group_boundary_margin = 32;
 var group_compactness = 0.000001;
-var group_padding = 16;
+var group_padding = 8;
 
 var tocolor = "fill";
 var towhite = "stroke";
@@ -247,7 +247,10 @@ var groups = {
     {% for attribute_name in non_numerical_node_attributes %}"{{attribute_name}}": {},{% endfor %}
 };
 
-if ("location" in groups) {groups['location']['cytoplasm'] = {'id':"cytoplasm", 'leaves':[], 'groups':[], 'padding':group_padding}}
+if ("location" in groups) {
+    groups.location['plasma_membrane'] = {'id':"plasma_membrane", 'leaves':[], 'groups':[], 'padding':group_padding}
+    groups.location['cytoplasm'] = {'id':"cytoplasm", 'leaves':[], 'groups':[], 'padding':group_padding}
+}
 
 
 graph.nodes.forEach(function (v, i) {
@@ -259,24 +262,27 @@ graph.nodes.forEach(function (v, i) {
     });
 });
 
-if ("location" in groups) { delete groups['location']['extracellular']; }
+if ("location" in groups) { delete groups.location['extracellular']; }
 
 Object.keys(groups).forEach(function (key) {
     groups[key] = Object.values(groups[key])
 });
 
 if ("location" in groups) {
-    var cytoplasm_index = _(groups['location']).findIndex(function(location){return location['id']==='cytoplasm'})
-    _(groups['location']).each(function(location, i){if (i !== cytoplasm_index){groups['location'][cytoplasm_index]['groups'].push(i)}});
+    var cytoplasm_index = _(groups.location).findIndex(function(location){return location.id==='cytoplasm'})
+    _(groups.location).each(function(location, i){if (location.id !== 'cytoplasm' && location.id !== 'plasma_membrane'){groups.location[cytoplasm_index]['groups'].push(i)}});
+
+    var plasma_membrane_index = _(groups.location).findIndex(function(location){return location.id==='plasma_membrane'})
+    groups.location[plasma_membrane_index]['groups'].push(cytoplasm_index)
+
+    _(groups.location).each(function (g) {g.padding = g.id === 'plasma_membrane' ? 0 : group_padding * (g.groups.length + 1);});
+
 }
 
 graph.nodes.forEach(function (n) {
     n.height = n.width = group_boundary_margin;
 });
 
-groups['location'].forEach(function (g) {
-    g.padding = group_padding * (g.groups.length + 1);
-});
 
 
 /////////////////////////////////////////////////////////////////////////////
@@ -316,7 +322,7 @@ var node = g.selectAll(".node")
             })
             .style("stroke-width", default_stroke_width)
             .style(towhite, "white")
-            .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
+            // .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
             .call(cola.drag);
 
 
@@ -383,7 +389,7 @@ function restart() {
                      // .attr('rx',30)
                      // .attr('ry',30)
                      .style("fill", function (d) { return group_color(d.id); })
-                     .style("opacity", function (d) { return 1/d.groups.length; })
+                     .style("opacity", 0.7)
                      // .style("stroke", function (d) { return group_color(d.id); })
                      // .style("stroke-width", function (d) { return 20; })
                      // .style("stroke-dasharray", function (d) { return "5, 5"; })
@@ -510,7 +516,7 @@ function remove_highlight() {
 node.on("click", function(d) { if (shiftKey) {shiftKey = false; window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);} });
 
 function set_focus(d) {
-    d3.event.stopPropagation();
+    // d3.event.stopPropagation();
 
     if (shiftKey) {shiftKey = false; console.log('here'); window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);}
     if (highlight_trans < 1) {
@@ -523,7 +529,7 @@ function set_focus(d) {
 }
 
 function remove_focus() {
-    d3.event.stopPropagation();
+    // d3.event.stopPropagation();
 
     focus_node = null;
     node.style("opacity", 1);
